--- a/app/src/main/res/layout/activity_call.xml
+++ b/app/src/main/res/layout/activity_call.xml
@@ -95,7 +95,7 @@
         android:alpha="0.8"
         android:gravity="center"
         android:textColor="@color/md_grey_black"
-        android:textSize="@dimen/bigger_text_size"
+        android:textSize="@dimen/normal_text_size"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@+id/call_sim_image"
         app:layout_constraintEnd_toEndOf="@+id/call_sim_image"
@@ -332,7 +332,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/normal_margin"
             android:text="@string/decline"
-            android:textSize="@dimen/bigger_text_size"
+            android:textSize="@dimen/normal_text_size"
             app:layout_constraintEnd_toEndOf="@+id/call_decline"
             app:layout_constraintStart_toStartOf="@+id/call_decline"
             app:layout_constraintTop_toBottomOf="@+id/call_decline" />
@@ -423,7 +423,7 @@
             android:layout_marginTop="@dimen/normal_margin"
             android:elevation="@dimen/medium_margin"
             android:text="@string/accept"
-            android:textSize="@dimen/bigger_text_size"
+            android:textSize="@dimen/normal_text_size"
             app:layout_constraintEnd_toEndOf="@+id/call_accept"
             app:layout_constraintStart_toStartOf="@+id/call_accept"
             app:layout_constraintTop_toBottomOf="@+id/call_accept" />
