--- a/app/src/main/res/layout/activity_dialpad.xml
+++ b/app/src/main/res/layout/activity_dialpad.xml
@@ -32,7 +32,7 @@
             android:paddingTop="@dimen/activity_margin"
             android:paddingEnd="@dimen/activity_margin"
             android:text="@string/no_contacts_found"
-            android:textSize="@dimen/bigger_text_size"
+            android:textSize="@dimen/normal_text_size"
             android:textStyle="italic"
             android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
