--- a/app/src/main/res/layout/activity_manage_speed_dial.xml
+++ b/app/src/main/res/layout/activity_manage_speed_dial.xml
@@ -35,7 +35,7 @@
                 android:layout_height="wrap_content"
                 android:padding="@dimen/normal_margin"
                 android:text="@string/speed_dial_label"
-                android:textSize="@dimen/bigger_text_size" />
+                android:textSize="@dimen/normal_text_size" />
 
             <com.nibav.commons.views.MyRecyclerView
                 android:id="@+id/speed_dial_list"
