--- a/app/src/main/res/layout/call_notification.xml
+++ b/app/src/main/res/layout/call_notification.xml
@@ -10,7 +10,7 @@
         style="@style/TextAppearance.Compat.Notification.Title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="@dimen/bigger_text_size"
+        android:textSize="@dimen/normal_text_size"
         android:textStyle="bold"
         tools:text="Caller name" />
 
