--- a/app/src/main/res/layout/dialog_export_call_history.xml
+++ b/app/src/main/res/layout/dialog_export_call_history.xml
@@ -26,7 +26,7 @@
                 android:layout_height="wrap_content"
                 android:singleLine="true"
                 android:textCursorDrawable="@null"
-                android:textSize="@dimen/bigger_text_size" />
+                android:textSize="@dimen/normal_text_size" />
 
         </com.nibav.commons.views.MyTextInputLayout>
     </LinearLayout>
