--- a/app/src/main/res/layout/fragment_letters_layout.xml
+++ b/app/src/main/res/layout/fragment_letters_layout.xml
@@ -18,7 +18,7 @@
             android:paddingTop="@dimen/activity_margin"
             android:paddingEnd="@dimen/activity_margin"
             android:text="@string/no_contacts_found"
-            android:textSize="@dimen/bigger_text_size"
+            android:textSize="@dimen/normal_text_size"
             android:textStyle="italic"
             android:visibility="gone" />
 
@@ -32,7 +32,7 @@
             android:gravity="center"
             android:padding="@dimen/activity_margin"
             android:text="@string/create_new_contact"
-            android:textSize="@dimen/bigger_text_size"
+            android:textSize="@dimen/normal_text_size"
             android:visibility="gone" />
 
         <com.nibav.commons.views.MyRecyclerView
