--- a/app/src/main/res/layout/fragment_recents.xml
+++ b/app/src/main/res/layout/fragment_recents.xml
@@ -16,7 +16,7 @@
         android:paddingTop="@dimen/activity_margin"
         android:paddingEnd="@dimen/activity_margin"
         android:text="@string/no_previous_calls"
-        android:textSize="@dimen/bigger_text_size"
+        android:textSize="@dimen/normal_text_size"
         android:textStyle="italic"
         android:visibility="gone" />
 
@@ -30,7 +30,7 @@
         android:gravity="center"
         android:padding="@dimen/activity_margin"
         android:text="@string/request_access"
-        android:textSize="@dimen/bigger_text_size"
+        android:textSize="@dimen/normal_text_size"
         android:visibility="gone" />
 
     <com.nibav.commons.views.MyRecyclerView
