--- a/app/src/main/res/layout/item_conference_call.xml
+++ b/app/src/main/res/layout/item_conference_call.xml
@@ -26,7 +26,7 @@
         android:layout_toEndOf="@+id/item_conference_call_image"
         android:ellipsize="end"
         android:maxLines="1"
-        android:textSize="@dimen/bigger_text_size"
+        android:textSize="@dimen/normal_text_size"
         app:layout_constraintBottom_toBottomOf="@+id/item_conference_call_image"
         app:layout_constraintEnd_toStartOf="@+id/item_conference_call_split"
         app:layout_constraintStart_toEndOf="@+id/item_conference_call_image"
