--- a/app/src/main/res/layout/item_recent_call.xml
+++ b/app/src/main/res/layout/item_recent_call.xml
@@ -35,7 +35,7 @@
         android:maxLines="1"
         android:textAlignment="viewStart"
         android:textDirection="locale"
-        android:textSize="@dimen/bigger_text_size"
+        android:textSize="@dimen/normal_text_size"
         app:layout_constraintBottom_toTopOf="@id/item_recents_date_time"
         app:layout_constraintEnd_toStartOf="@+id/overflow_menu_icon"
         app:layout_constraintStart_toEndOf="@+id/item_recents_image"
