--- a/app/src/main/res/layout/item_speed_dial.xml
+++ b/app/src/main/res/layout/item_speed_dial.xml
@@ -11,4 +11,4 @@
     android:maxLines="1"
     android:padding="@dimen/activity_margin"
     android:singleLine="true"
-    android:textSize="@dimen/bigger_text_size" />
+    android:textSize="@dimen/normal_text_size" />
